# bicycle

./: .gitignore  README.md  environment.yml  pyproject.toml
benchmarks/perturbseq/: clicked_perturbseq.py  lsf.yaml  sm_perturbseq.smk
benchmarks/synthetic/: benchmark_bicycle.py  benchmark_llc.py  benchmark_nodags.py  benchmark_notears.py  clicked_randnodags.py  lsf.yaml  sm_randnodags.smk
notebooks/data_preprocessing/atac/: plot_matrix.ipynb
notebooks/data_preprocessing/frangieh_perturb_cite_seq/: 220930_PerturbCITE_regulators.csv  Check_Consistency_of_Splits.ipynb  frangieh_preproc.py  frangieh_preproc_original.py
notebooks/data_preprocessing/heart_organoids/: Prepare_Heart_Organoid_Clusters.ipynb
notebooks/experiments/frangieh/: Plot_Diagnostics.ipynb  evaluate_imae.py  evaluate_normalized_mse.py  evaluate_ood_prediction.py  paper_nodags_vs_llc.ipynb  paper_perturb_cite_seq_experiments.ipynb  run_all_cells.py  run_experiments.py  run_nodags_split.py  run_perturb_seq.py
notebooks/experiments/heart_organoids/: Plot_Diagnostics.ipynb  bootstrapped_cluster_run_heart_organoids.py  bootstrapped_run_pilot_screen_Cas9_all_celltypes.py  bootstrapped_run_pilot_screen_dCas9_all_celltypes.py  cluster_run_heart_organoids.py  run_heart_organoids.py  run_heart_organoids.sh  start_experiments.py
notebooks/stale/: NormanWeissman2019.ipynb  ReplogleWeissman2022_K562.ipynb  clicked_synthetic.py  evaluate_perturb_seq.py  evaluate_perturb_seq_mae.py  norman.py  sm_scheduler.smk
src/bicycle/: callbacks.py  dictlogger.py  model.py  model_eval.py
src/bicycle/utils/: data.py  (+4 more)
(+28 files in other folders)
