[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']

[project]
name = "bicycle"
description = "A Python package for GRN inference"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python"
]
dependencies = [
    "numpy",
    "pyro-ppl",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 100
known_first_party = "bicycle"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.black]
line-length = 110